--- a/application/build.gradle
+++ b/application/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'org.valid4j:valid4j:0.5.0'
 
 
     testImplementation 'org.assertj:assertj-core:3.24.2'
