--- a/event-core/build.gradle
+++ b/event-core/build.gradle
@@ -22,6 +22,7 @@ java {
 }
 dependencies {
     api project(":identity")
+    implementation 'org.valid4j:valid4j:0.5.0'
 
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
