--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -10,25 +10,35 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+    id "io.freefair.lombok" version "8.0.1"
+    id "com.google.protobuf" version "0.9.3" // for-event-payload
+    id 'idea'
+}
+
+idea {
+    module {
+        jdkName = '11'
+    }
+}
+
+java {
+    sourceCompatibility = 11
+    targetCompatibility = 11
 }
 
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
-java {
-    sourceCompatibility = 11
-    targetCompatibility = 11
-}
-dependencies {
-    api project(":event-core")
 
-    implementation 'org.assertj:assertj-core:3.24.2'
+dependencies {
     implementation 'org.valid4j:valid4j:0.5.0'
+    implementation project(":domain")
+
+    testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
-
-
+    testImplementation project(':event-assertj')
 }
 
 testing {
@@ -38,5 +48,12 @@ testing {
             // Use JUnit Jupiter test framework
             useJUnitJupiter('5.8.2')
         }
+    }
+}
+
+
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.23.0'
     }
 }
