--- a/event-core/build.gradle
+++ b/event-core/build.gradle
@@ -23,6 +23,8 @@ java {
 dependencies {
     api project(":identity")
     implementation 'org.valid4j:valid4j:0.5.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
 
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
