--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ rootProject.name = 'a-es.example'
 include('identity')
 include('event-core')
 include('event-assertj')
+include('event-annotation')
 
 include('application')
 include('domain')
