--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -34,6 +34,7 @@ repositories {
 dependencies {
     api project(":identity")
     api project(":event-core")
+    annotationProcessor project(":event-annotation")
 
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
@@ -47,6 +48,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
     testImplementation project(':event-assertj')
+
 }
 
 testing {
