--- a/event/assertj/build.gradle
+++ b/event/assertj/build.gradle
@@ -11,27 +11,20 @@ plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
 }
-java {
-    sourceCompatibility = 11
-    targetCompatibility = 11
-}
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
-
+java {
+    sourceCompatibility = 11
+    targetCompatibility = 11
+}
 dependencies {
+    api project(":event:core")
 
-    implementation project(":domain")
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'org.assertj:assertj-core:3.24.2'
     implementation 'org.valid4j:valid4j:0.5.0'
-
-
-    testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
