--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -21,7 +21,7 @@ java {
     targetCompatibility = 11
 }
 dependencies {
-    api project(":identity")
+    api project(":event:identity")
     implementation 'org.valid4j:valid4j:0.5.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 
