--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -10,6 +10,9 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+
+    id 'signing'
+    id 'maven-publish'
 }
 
 repositories {
@@ -19,6 +22,9 @@ repositories {
 java {
     sourceCompatibility = 17
     targetCompatibility = 17
+
+    withJavadocJar()
+    withSourcesJar()
 }
 dependencies {
     api 'com.google.protobuf:protobuf-java:3.23.0'
@@ -48,3 +54,69 @@ testing {
         }
     }
 }
+
+jar {
+    manifest {
+        attributes(
+                'Specification-Title': artifactName,
+                'Specification-Version': artifactVersion,
+                'Specification-Vendor': vendor,
+                'Implementation-Title': artifactName,
+                'Implementation-Version': artifactVersion,
+                'Implementation-Vendor': vendor
+        )
+    }
+}
+
+publishing {
+    repositories {
+        maven {
+            name "OSSRH"
+            url "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            credentials {
+                username System.getenv("MAVEN_USERNAME")
+                password System.getenv("MAVEN_PASSWORD")
+            }
+        }
+    }
+
+    publications {
+        maven(MavenPublication) {
+            groupId 'io.agistep'
+            artifactId artifactId
+            version artifactVersion
+            from components.java
+            pom {
+                name = "gamja"
+                description = "gamja"
+                url = "https://github.com/agistep/a-es.example"
+                licenses {
+                    license {
+                        name = "MIT License"
+                        url = "https://github.com/agistep/a-es.example/blob/main/LICENSE"
+                    }
+                }
+                developers {
+                    developer {
+                        id = "len"
+                        name = "jeonggyu"
+                        email = "joenggyu0@gmail.com"
+                    }
+                }
+                scm {
+                    connection = "https://github.com/agistep/a-es.example.git"
+                    developerConnection = "https://github.com/agistep/a-es.example.git"
+                    url = "https://github.com/agistep/a-es.example"
+                }
+            }
+        }
+    }
+}
+
+signing {
+    def signingKey = System.getenv("SIGNING_KEY")
+    def signingPassword = System.getenv("SIGNING_PASSWORD")
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications.maven
+}
+
