--- a/examples/todo/domain/build.gradle
+++ b/examples/todo/domain/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
-    testImplementation project(':event:assertj')
+    testImplementation project(':event:test')
 }
 
 testing {
