--- a/settings.gradle
+++ b/settings.gradle
@@ -10,8 +10,12 @@
 
 rootProject.name = 'a-es.example'
 include('event:identity')
+
 include('event:core')
-include('event:assertj')
+include('event:storage')
+include('event:storage-jdbc')
+
+include('event:test')
 
 include('examples:todo:application')
 include('examples:todo:domain')
