--- a/examples/todo/infrastructure/build.gradle
+++ b/examples/todo/infrastructure/build.gradle
@@ -32,7 +32,10 @@ repositories {
 }
 
 dependencies {
+    implementation (project(":event:storage"))
+
     implementation 'org.valid4j:valid4j:0.5.0'
+
     implementation project(":examples:todo:domain")
 
     testImplementation 'org.assertj:assertj-core:3.24.2'
