--- a/examples/todo/infrastructure/build.gradle
+++ b/examples/todo/infrastructure/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
-    testImplementation project(':event:test')
+    testImplementation project(':event:test-supports')
 }
 
 testing {
