--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -21,7 +21,6 @@ java {
     targetCompatibility = 17
 }
 dependencies {
-    api project(":event:identity")
     api 'com.google.protobuf:protobuf-java:3.23.0'
 
     implementation 'org.valid4j:valid4j:0.5.0'
@@ -35,6 +34,8 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+
+    testImplementation project(':event:test-supports')
 
 }
 
