테스트시 필요한 fixture 관리 시작

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@
 rootProject.name = 'a-es.example'
 include('event:identity')
 
+include('event:fixtures')
 include('event:core')
 include('event:storage')
 include('event:storage-jdbc')
