--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
     testImplementation project(':event:test-supports')
+    testImplementation project(":event:fixtures")
 
 }
 
