--- a/event/storage/build.gradle
+++ b/event/storage/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
+    testImplementation project(":event:fixtures")
+
 }
 
 testing {
