--- a/event/test-supports/build.gradle
+++ b/event/test-supports/build.gradle
@@ -25,8 +25,10 @@ dependencies {
 
     implementation 'org.assertj:assertj-core:3.24.2'
     implementation 'org.valid4j:valid4j:0.5.0'
+
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+    testImplementation project(":event:fixtures")
 
 
 }
