--- a/examples/todo/domain/build.gradle
+++ b/examples/todo/domain/build.gradle
@@ -32,7 +32,7 @@ repositories {
 }
 
 dependencies {
-    api project(":event:core")
+    api project(":gamja-event:core")
 
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
