--- a/gamja-event/storage-jdbc/build.gradle
+++ b/gamja-event/storage-jdbc/build.gradle
@@ -16,12 +16,8 @@ repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
-java {
-    sourceCompatibility = 17
-    targetCompatibility = 17
-}
 dependencies {
-    api project(":event:storage")
+    api project(":gamja-event:storage")
 
     implementation 'org.valid4j:valid4j:0.5.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
