--- a/gamja-event/test-supports/build.gradle
+++ b/gamja-event/test-supports/build.gradle
@@ -16,24 +16,14 @@ repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
-java {
-    sourceCompatibility = 17
-    targetCompatibility = 17
-}
 dependencies {
-    api project(":event:core")
+    api project(":gamja-event:core")
 
+    implementation 'org.assertj:assertj-core:3.24.2'
     implementation 'org.valid4j:valid4j:0.5.0'
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'org.apache.commons:commons-csv:1.10.0'
-    implementation 'org.slf4j:slf4j-api:2.0.9'
-    implementation 'ch.qos.logback:logback-classic:1.2.12'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.5'
-
-    testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+
 
 }
 
