--- a/settings.gradle
+++ b/settings.gradle
@@ -9,13 +9,13 @@
  */
 
 rootProject.name = 'a-es.example'
-include('event:identity')
+include('gamja-event:identity')
 
-include('event:core')
-include('event:storage')
-include('event:storage-jdbc')
+include('gamja-event:core')
+include('gamja-event:storage')
+include('gamja-event:storage-jdbc')
 
-include('event:test-supports')
+include('gamja-event:test-supports')
 
 include('examples:todo:application')
 include('examples:todo:domain')
