--- a/examples/todo/domain/build.gradle
+++ b/examples/todo/domain/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
+    testImplementation project(':event:test-supports')
+
 }
 
 testing {
