--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -23,6 +23,8 @@ java {
 dependencies {
     api 'com.google.protobuf:protobuf-java:3.23.0'
 
+    implementation project(":event:identity")
+
     implementation 'org.valid4j:valid4j:0.5.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.apache.commons:commons-csv:1.10.0'
