--- a/event/storage-jdbc/build.gradle
+++ b/event/storage-jdbc/build.gradle
@@ -24,14 +24,10 @@ java {
 }
 dependencies {
     api project(":event:storage")
+    api project(":event:sed")
 
     implementation 'org.valid4j:valid4j:0.5.0'
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'org.apache.commons:commons-csv:1.10.0'
-    implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'ch.qos.logback:logback-classic:1.2.12'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.5'
     implementation 'org.postgresql:postgresql:42.5.1'
 
     testImplementation 'com.google.protobuf:protobuf-java:3.23.0'
