--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ include('event:identity')
 
 include('event:fixtures')
 include('event:core')
+include('event:sed')
 include('event:storage')
 include('event:storage-jdbc')
 
