--- a/event/storage-jdbc/build.gradle
+++ b/event/storage-jdbc/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 
     implementation 'org.valid4j:valid4j:0.5.0'
     implementation 'ch.qos.logback:logback-classic:1.2.12'
-    implementation 'org.postgresql:postgresql:42.5.1'
+    implementation 'com.zaxxer:HikariCP:5.0.1'
 
     testImplementation 'com.google.protobuf:protobuf-java:3.23.0'
 
