--- a/event/storage-jdbc/build.gradle
+++ b/event/storage-jdbc/build.gradle
@@ -24,7 +24,7 @@ java {
 }
 dependencies {
     api project(":event:storage")
-    api project(":event:sed")
+    api project(":event:serializer")
 
     implementation 'org.valid4j:valid4j:0.5.0'
     implementation 'ch.qos.logback:logback-classic:1.2.12'
