--- a/event/storage/build.gradle
+++ b/event/storage/build.gradle
@@ -23,7 +23,7 @@ java {
 }
 dependencies {
     api project(":event:core")
-    api project(":event:sed")
+    api project(":event:serializer")
 
     implementation 'org.valid4j:valid4j:0.5.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
