--- a/event/storage-csv/build.gradle
+++ b/event/storage-csv/build.gradle
@@ -8,13 +8,11 @@
  */
 
 plugins {
-    // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
-
+    id "com.google.protobuf" version "0.9.3" // for-EVENT-payload
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 java {
@@ -22,20 +20,18 @@ java {
     targetCompatibility = 17
 }
 dependencies {
-    api project(":event:core")
+    api project(":event:storage")
+    api project(":event:serializer")
 
+    implementation 'org.valid4j:valid4j:0.5.0'
+    implementation 'ch.qos.logback:logback-classic:1.2.12'
     implementation 'org.valid4j:valid4j:0.5.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.apache.commons:commons-csv:1.10.0'
-    implementation 'org.slf4j:slf4j-api:2.0.9'
-    implementation 'ch.qos.logback:logback-classic:1.2.12'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.5'
+
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
-
-    testImplementation project(":event:fixtures")
 
 }
 
@@ -46,5 +42,12 @@ testing {
             // Use JUnit Jupiter test framework
             useJUnitJupiter('5.8.2')
         }
+    }
+}
+
+
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.23.0'
     }
 }
