--- a/settings.gradle
+++ b/settings.gradle
@@ -13,9 +13,10 @@ include('event:identity')
 
 include('event:fixtures')
 include('event:core')
-include('event:sed')
+include('event:serializer')
 include('event:storage')
 include('event:storage-jdbc')
+include('event:storage-csv')
 
 include('event:test-supports')
 
