--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include('event:identity')
 include('event:fixtures')
 include('event:core')
 include('event:serializer')
+include('event:serializer-xx')
 include('event:storage')
 include('event:storage-jdbc')
 include('event:storage-csv')
