--- a/event/serializer/build.gradle
+++ b/event/serializer/build.gradle
@@ -8,6 +8,7 @@ repositories {
 
 dependencies {
     api project(":event:core")
+    implementation 'com.google.protobuf:protobuf-java:3.23.0'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.5'
