--- a/event/serializer-xx/build.gradle
+++ b/event/serializer-xx/build.gradle
@@ -7,16 +7,14 @@ repositories {
 }
 
 dependencies {
-    api project(":event:core")
-    implementation 'com.google.protobuf:protobuf-java:3.23.0'
-
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.5'
+    api project(":event:serializer")
 
     implementation 'org.valid4j:valid4j:0.5.0'
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+
+    testImplementation(project(":event:storage"))
 }
 testing {
     suites {
