--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.12'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.5'
+    implementation 'io.github.classgraph:classgraph:4.8.165'
+
 
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
