aggregate는 object타입을 쓰지않는다

--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 
     testImplementation project(':event:test-supports')
     testImplementation project(":event:fixtures")
+    testImplementation project(path: ':event:test-supports')
+    testImplementation project(path: ':event:test-supports')
+    testImplementation project(path: ':event:test-supports')
 
 }
 
