--- a/event/core/build.gradle
+++ b/event/core/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     api 'com.google.protobuf:protobuf-java:3.23.0'
 
     implementation project(":event:identity")
+//    implementation 'io.agistep:identity:0.0.2'
+    implementation 'org.yaml:snakeyaml:2.2'
 
     implementation 'org.valid4j:valid4j:0.5.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
